--- a/_config.yml
+++ b/_config.yml
@@ -4,12 +4,12 @@
 
 # Site
 title: ChennBlogs
-subtitle: ''
-description: ''
+subtitle: '我的一些记录'
+description: '描述'
 keywords:
-author: John Doe
-language: en
-timezone: ''
+author:  Chenn
+language: zh-CN
+timezone: Asia/Shanghai
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -39,7 +39,7 @@ external_link:
   field: site # Apply to the whole site
   exclude: ''
 filename_case: 0
-render_drafts: false
+render_drafts: false # 草稿默认不会显示在页面中，您可在执行时加上 --draft 参数，或是在 _config.yml 中把 render_drafts 参数设为 true 来预览草稿
 post_asset_folder: false
 relative_link: false
 future: true
