--- a/themes/Acetolog/_config.yml
+++ b/themes/Acetolog/_config.yml
@@ -10,7 +10,7 @@ description: A beautiful & simple theme.
 # AvatorURL
 # it would be shown on sidecar.
 
-avatar: https://yourAvatorURL
+avatar: /images/avatar.png
 
 # Comment
 
